removed the placeholder homepage

--- a/angular-frontend/src/app/main-menu/main-menu.component.html
+++ b/angular-frontend/src/app/main-menu/main-menu.component.html
@@ -1,8 +1,8 @@
 <section class="main">
     <a class="logo" routerLink="/">TaskFlow</a>
-   
+
     <ul >
-        <li><a routerLink="home"><img src="icons8-home-24.svg">
+        <li><a routerLink="/"><img src="icons8-home-24.svg">
             Home</a>
         </li>
         <li><a routerLink="tasks"><img src="icons8-graph-24.png">
