--- a/angular-frontend/src/app/calendars-page/calendars-page.component.css
+++ b/angular-frontend/src/app/calendars-page/calendars-page.component.css
@@ -177,7 +177,7 @@
 
 .date-cell.today .date-number {
   background-color: var(--primary-color);
-  color: white;
+  color: #4f47e6;
 }
 
 .event-list {
