--- a/angular-frontend/src/app/home-page/home-page-calendar/home-page-calendar.component.css
+++ b/angular-frontend/src/app/home-page/home-page-calendar/home-page-calendar.component.css
@@ -4,10 +4,10 @@
   background-color: white;
   border-radius: 10px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+  padding:1rem;
   width: 100%;
   height: 100%;
   overflow: hidden;
-  min-height: 400px; /* Ensure minimum height */
 }
 
 .calendar-header {
