--- a/angular-frontend/src/app/tasks-page/tasks-page.component.html
+++ b/angular-frontend/src/app/tasks-page/tasks-page.component.html
@@ -17,7 +17,7 @@
         <select [(ngModel)]="sortCriteria" (change)="sortTasks()">
           <option value="priority">Sort by Priority</option>
           <option value="date">Sort by Date</option>
-          <option value="status">Sort by Status</option>
+          <option value="completionStatus">Sort by Status</option>
         </select>
         <button class="add-task-btn" (click)="addTask()">
           Add Task
