--- a/angular-frontend/src/styles.css
+++ b/angular-frontend/src/styles.css
@@ -1,10 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+@import './styles/variables.css';
 
 * {
-    padding:0px;
-    margin: 0px;
+    padding: 0;
+    margin: 0;
     box-sizing: border-box;
-    font-family: 'Roboto', 'Times New Roman', serif;
-    /* font-weight: 500;
-} */
+    font-family: 'Roboto', sans-serif;
+}
+
+body {
+    background-color: var(--background-color);
+    color: var(--text-primary);
+}
+
+.main{
+  max-width: 1400px;
+  margin: 0 auto;
+  background-color: brown;
 }
