added responsive styles

--- a/angular-frontend/src/app/home-page/home-page.component.html
+++ b/angular-frontend/src/app/home-page/home-page.component.html
@@ -100,7 +100,7 @@
       <app-home-page-calendar />
     </div>
 
-    <div class="notes">
+    <div class="notes-container">
       <div class="sect3-title">
         <h3>Notes</h3>
         <img src="icons8-plus%20sign.png" (click)="navigateToNewNote()" alt="Add Note">
